--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(Test)
 target_link_libraries(Test PRIVATE expression_template)
 target_compile_features(Test PRIVATE cxx_std_17)
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-    target_compile_options(Test PRIVATE /W4 /arch:AVX2 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:/O2>")
+    target_compile_options(Test PRIVATE /W4 /arch:AVX2 /Zc:__cplusplus /bigobj "$<$<CONFIG:RELEASE>:/O2>")
 else()
     target_compile_options(Test PRIVATE -Wall "$<$<CONFIG:RELEASE>:-O2>")
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
@@ -29,37 +29,37 @@ target_sources(Test PRIVATE
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
 
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_multithreading.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_init_list_helper.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
-#
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_indexer.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_walker.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_traverser.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
-#
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
-#
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_operators.cpp
-#
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_detail.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_reshape_transpose_view.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_slice_view.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_mapping_view.cpp
-#
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_multithreading.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_init_list_helper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_indexer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_walker.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_traverser.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_operators.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_detail.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_reshape_transpose_view.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_slice_view.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory_mapping_view.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_construction.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_assign.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_equality.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_data_accessor.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_view.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_reduce_slide_transform.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_application_specific.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_assign.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_equality.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_data_accessor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_view.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_reduce_slide_transform.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_application_specific.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_indexing.cpp
 #
