--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,9 @@ target_include_directories(expression_template INTERFACE
 
 target_compile_features(expression_template INTERFACE cxx_std_17)
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-    target_compile_options(expression_template INTERFACE /W4 /arch:AVX2 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:/O2>")
+    target_compile_options(expression_template INTERFACE /W4 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:/O2>")
 else()
-    target_compile_options(expression_template INTERFACE -Wall -mavx2 "$<$<CONFIG:RELEASE>:-O3>")
+    target_compile_options(expression_template INTERFACE -Wall "$<$<CONFIG:RELEASE>:-O2>")
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         target_compile_options(expression_template INTERFACE -stdlib=libc++)
     else()
