--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,3 +1,9 @@
+# GTensor - matrix computation library
+# Copyright (c) 2022 Ivan Malezhyk <ivanmzk@gmail.com>
+#
+# Distributed under the Boost Software License, Version 1.0.
+# The full license is in the file LICENSE.txt, distributed with this software.
+
 add_executable(Benchmark)
 
 target_link_libraries(Benchmark PRIVATE gtensor)
