refactor math, add std_complex tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
         "execution": "cpp",
         "queue": "cpp",
         "bit": "cpp",
-        "__config": "cpp"
+        "__config": "cpp",
+        "complex": "cpp"
     }
 }
