--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,8 @@ endif()
 
 
 target_sources(Test PRIVATE
+    #${CMAKE_CURRENT_LIST_DIR}/test_tmp.cpp
+
     #${CMAKE_CURRENT_LIST_DIR}/test_helpers_for_testing.cpp
 
     ${CMAKE_CURRENT_LIST_DIR}/test_multithreading.cpp
