--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,7 @@ target_sources(Test PRIVATE
 #
     #${CMAKE_CURRENT_LIST_DIR}/test_multithreading.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_storage.cpp
-    #${CMAKE_CURRENT_LIST_DIR}/test_common.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_common.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_libdivide_helper.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_init_list_helper.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_slice.cpp
@@ -77,7 +77,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_LIST_DIR}/test_math_diff_gradient.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_math_sum_prod.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_math_cumsum_cumprod.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/test_math_all_any.cpp
+    #${CMAKE_CURRENT_LIST_DIR}/test_math_all_any.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_math_min_max.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_math_matmul.cpp
 #
