--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 
 
 target_sources(Test PRIVATE
-    #${CMAKE_CURRENT_LIST_DIR}/test_tmp.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_tmp.cpp
 
     #${CMAKE_CURRENT_LIST_DIR}/test_helpers_for_testing.cpp
 #
@@ -79,7 +79,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_LIST_DIR}/test_math_cumsum_cumprod.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_math_all_any.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_math_min_max.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/test_math_matmul.cpp
+    #${CMAKE_CURRENT_LIST_DIR}/test_math_matmul.cpp
 #
     #${CMAKE_CURRENT_LIST_DIR}/test_statistic_ptp_mean.cpp
     #${CMAKE_CURRENT_LIST_DIR}/test_statistic_var_std.cpp
