--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -10,7 +10,7 @@ target_link_libraries(Benchmark PRIVATE gtensor)
 target_include_directories(Benchmark PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../qa_common)
 target_compile_features(Benchmark PRIVATE cxx_std_17)
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-    target_compile_options(Benchmark PRIVATE /W4 /Zc:__cplusplus /bigobj "$<$<CONFIG:RELEASE>:/O2>")
+    target_compile_options(Benchmark PRIVATE /W4 /Zc:__cplusplus /arch:AVX2 /bigobj "$<$<CONFIG:RELEASE>:/O2>")
 else()
     target_compile_options(Benchmark PRIVATE -Wall -march=native "$<$<CONFIG:RELEASE>:-O2>")
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
