--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "type": "shell",
             "label": "cmake generate",
-            "command": "cmake.exe -DCMAKE_BUILD_TYPE=Release -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -G \"Ninja\" -S ${workspaceFolder} -B ${workspaceFolder}\\build",
+            "command": "cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -G \"Ninja\" -S ${workspaceFolder} -B ${workspaceFolder}\\build",
             "args": [],
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -30,7 +30,7 @@
         {
             "type": "shell",
             "label": "cmake build Test with error filter",
-            "command": "cmake.exe --build ${workspaceFolder}\\build -j 10 --target Test | findstr /s /i error",
+            "command": "cmake --build ${workspaceFolder}\\build -j 10 --target Test | findstr /s /i error",
             "args": [],
             "group": "test"
         },
