--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "type": "shell",
             "label": "cmake generate",
-            "command": "cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -G \"Ninja\" -S ${workspaceFolder} -B ${workspaceFolder}\\build",
+            "command": "cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TEST=ON -DBUILD_BENCHMARK=ON -G \"Ninja\" -S ${workspaceFolder} -B ${workspaceFolder}/build",
             "args": [],
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -16,35 +16,35 @@
         {
             "type": "shell",
             "label": "cmake build Test",
-            "command": "cmake -E time cmake -E env NINJA_STATUS=[%e/%f/%t] cmake.exe --build ${workspaceFolder}\\build -j 10 --target Test",
+            "command": "cmake -E time cmake -E env NINJA_STATUS=[%e/%f/%t] cmake --build ${workspaceFolder}/build -j 10 --target Test",
             "args": [],
             "group": "test"
         },
         {
             "type": "shell",
             "label": "cmake build Benchmark",
-            "command": "cmake -E time cmake -E env NINJA_STATUS=[%e/%f/%t] cmake.exe --build ${workspaceFolder}\\build -j 10 --target Benchmark",
+            "command": "cmake -E time cmake -E env NINJA_STATUS=[%e/%f/%t] cmake --build ${workspaceFolder}/build -j 10 --target Benchmark",
             "args": [],
             "group": "test"
         },
         {
             "type": "shell",
             "label": "cmake build Test with error filter",
-            "command": "cmake --build ${workspaceFolder}\\build -j 10 --target Test | findstr /s /i error",
+            "command": "cmake --build ${workspaceFolder}/build -j 10 --target Test | findstr /s /i error",
             "args": [],
             "group": "test"
         },
         {
             "type": "shell",
             "label": "Run Test",
-            "command": "${workspaceFolder}\\build\\test\\Test.exe",
+            "command": "${workspaceFolder}/build/test/Test",
             "args": [],
             "group": "test"
         },
         {
             "type": "shell",
             "label": "Run Benchmark",
-            "command": "${workspaceFolder}\\build\\benchmark\\Benchmark.exe",
+            "command": "${workspaceFolder}/build/benchmark/Benchmark",
             "args": [],
             "group": "test"
         },
