--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@
 # Distributed under the Boost Software License, Version 1.0.
 # The full license is in the file LICENSE.txt, distributed with this software.
 
-
 cmake_minimum_required(VERSION 3.2)
 project(gtensor)
 
@@ -14,6 +13,7 @@ set(cmake_dir ${CMAKE_CURRENT_LIST_DIR}/cmake)
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_package(Threads REQUIRED)
+include(${cmake_dir}/FindAvxDetect.cmake)
 
 add_library(gtensor INTERFACE)
 target_include_directories(gtensor INTERFACE
@@ -22,7 +22,7 @@ $<BUILD_INTERFACE:${include_dir}/expression_template_engine>
 $<BUILD_INTERFACE:${include_dir}/libdivide>
 )
 target_compile_features(gtensor INTERFACE cxx_std_17)
-target_link_libraries(gtensor INTERFACE Threads::Threads)
+target_link_libraries(gtensor INTERFACE Threads::Threads AvxDetect::AvxDetect)
 add_library(gtensor::gtensor ALIAS gtensor)
 
 option(BUILD_TEST "build gtensor tests" OFF)
@@ -49,10 +49,8 @@ install(EXPORT gtensor_targets
     NAMESPACE gtensor::
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/gtensor
 )
-install(FILES ${cmake_dir}/gtensorConfig.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/gtensor)
-install(DIRECTORY ${include_dir}/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/gtensor)
-
-export(EXPORT gtensor_targets
-    FILE ${CMAKE_CURRENT_BINARY_DIR}/cmake/gtensorTargets.cmake
-    NAMESPACE gtensor::
+install(FILES ${cmake_dir}/gtensorConfig.cmake
+    ${cmake_dir}/FindAvxDetect.cmake
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/gtensor)
+install(DIRECTORY ${include_dir}/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/gtensor
 )
