--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -20,8 +20,9 @@ endif()
 
 target_sources(Benchmark PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/benchmark_iterator.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/benchmark_eval.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/benchmark_statistic.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/benchmark_matmul.cpp
+    # ${CMAKE_CURRENT_LIST_DIR}/benchmark_eval.cpp
+    # ${CMAKE_CURRENT_LIST_DIR}/benchmark_statistic.cpp
+    # ${CMAKE_CURRENT_LIST_DIR}/benchmark_matmul.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/msvc_fake_use.cpp
     ${CMAKE_CURRENT_LIST_DIR}/benchmark.cpp
 )
